Removed installation of vbox additions, using correct username in preseed.cfg

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -52,7 +52,7 @@ d-i mirror/http/proxy string
 
 # Default user, change
 d-i passwd/user-fullname string "Jaguar Rivero"
-d-i passwd/username string jaguar.rivero
+d-i passwd/username string jrivero
 d-i passwd/user-password password 1qaz2wsx3edc4rfV
 d-i passwd/user-password-again password 1qaz2wsx3edc4rfV
 d-i user-setup/encrypt-home boolean false
